name:                YRC
version:             0.1.0.0
synopsis:            IRC client for Yi
description:         IRC client for Yi, somewhat based on ERC
homepage:            http://github.com/Fuuzetsu/yrc
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>
category:            Editor, Yi
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010